# pico-VA-monitor

./: AGENTS.md  Cargo.toml  README.md  for-linux.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  metrics.rs  termviz.rs
